// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SessionExecService addConfusionTS allows adding new timesteps 1`] = `

    SESSION

    Name: testing session
    Status: RUNNING

    ActiveBlock: -1
    ActiveInstances: 0

    Blocks: [{
      Show solutions: false
      Status: PLANNED
      Time limit: -1
      Number of instances: 1
    }]

    ConfusionTS: [{
      Difficulty: 20
      Speed: 10
    }]

    Feedbacks: []

    Settings: {
      ConfusionActive: true
      FeedbacksActive: false
      FeedbacksPublic: false
    }
`;

exports[`SessionExecService addConfusionTS allows adding new timesteps 2`] = `

    SESSION

    Name: testing session
    Status: RUNNING

    ActiveBlock: -1
    ActiveInstances: 0

    Blocks: [{
      Show solutions: false
      Status: PLANNED
      Time limit: -1
      Number of instances: 1
    }]

    ConfusionTS: [{
      Difficulty: 20
      Speed: 10
    },{
      Difficulty: 40
      Speed: -10
    }]

    Feedbacks: []

    Settings: {
      ConfusionActive: true
      FeedbacksActive: false
      FeedbacksPublic: false
    }
`;

exports[`SessionExecService addFeedback allows adding new feedbacks to a running session 1`] = `

    SESSION

    Name: testing session
    Status: RUNNING

    ActiveBlock: -1
    ActiveInstances: 0

    Blocks: [{
      Show solutions: false
      Status: PLANNED
      Time limit: -1
      Number of instances: 1
    }]

    ConfusionTS: []

    Feedbacks: [{
      Content: feedback1
      Votes: 0
    }]

    Settings: {
      ConfusionActive: false
      FeedbacksActive: true
      FeedbacksPublic: false
    }
`;

exports[`SessionExecService addFeedback allows adding new feedbacks to a running session 2`] = `

    SESSION

    Name: testing session
    Status: RUNNING

    ActiveBlock: -1
    ActiveInstances: 0

    Blocks: [{
      Show solutions: false
      Status: PLANNED
      Time limit: -1
      Number of instances: 1
    }]

    ConfusionTS: []

    Feedbacks: [{
      Content: feedback1
      Votes: 0
    },{
      Content: feedback2
      Votes: 0
    }]

    Settings: {
      ConfusionActive: false
      FeedbacksActive: true
      FeedbacksPublic: false
    }
`;

exports[`SessionExecService addResponse allows adding responses to an open FREE (NONE) instance 1`] = `

    SESSION

    Name: testing session
    Status: RUNNING

    ActiveBlock: 0
    ActiveInstances: 1

    Blocks: [{
      Show solutions: false
      Status: ACTIVE
      Time limit: -1
      Number of instances: 1
    }]

    ConfusionTS: []

    Feedbacks: []

    Settings: {
      ConfusionActive: false
      FeedbacksActive: false
      FeedbacksPublic: false
    }
`;

exports[`SessionExecService addResponse allows adding responses to an open FREE (NONE) instance 2`] = `
Object {
  "c7cd24ea4ea9d3eaab020517ed1babb7": Object {
    "count": 1,
    "text": "SCHWEIZ",
  },
}
`;

exports[`SessionExecService addResponse allows adding responses to an open FREE (NONE) instance 3`] = `
Object {
  "c7cd24ea4ea9d3eaab020517ed1babb7": Object {
    "count": 2,
    "text": "SCHWEIZ",
  },
}
`;

exports[`SessionExecService addResponse allows adding responses to an open FREE (NONE) instance 4`] = `

    QUESTION_INSTANCE

    isOpen: true
    version: 0

    responses: [
      ip: some ip
      fingerprint: some fingerprint
      value: {
        choices: undefined
        text: SCHWEIZ
        value: undefined
      }
    ,
      ip: some ip
      fingerprint: some fingerprint
      value: {
        choices: undefined
        text: schwiiz...
        value: undefined
      }
    ,
      ip: some ip
      fingerprint: some fingerprint
      value: {
        choices: undefined
        text: SCHWEIZ
        value: undefined
      }
    ]

    results: {
      choices: []
      free: [object Object]
    }
  
`;

exports[`SessionExecService addResponse allows adding responses to an open FREE (RANGE) instance 1`] = `

    SESSION

    Name: testing session
    Status: RUNNING

    ActiveBlock: 0
    ActiveInstances: 1

    Blocks: [{
      Show solutions: false
      Status: ACTIVE
      Time limit: -1
      Number of instances: 1
    }]

    ConfusionTS: []

    Feedbacks: []

    Settings: {
      ConfusionActive: false
      FeedbacksActive: false
      FeedbacksPublic: false
    }
`;

exports[`SessionExecService addResponse allows adding responses to an open FREE (RANGE) instance 2`] = `
Object {
  "80": Object {
    "count": 1,
    "value": 80,
  },
}
`;

exports[`SessionExecService addResponse allows adding responses to an open FREE (RANGE) instance 3`] = `
Object {
  "80": Object {
    "count": 2,
    "value": 80,
  },
}
`;

exports[`SessionExecService addResponse allows adding responses to an open FREE (RANGE) instance 4`] = `

    QUESTION_INSTANCE

    isOpen: true
    version: 0

    responses: [
      ip: some ip
      fingerprint: some fingerprint
      value: {
        choices: undefined
        text: undefined
        value: 80
      }
    ,
      ip: some ip
      fingerprint: some fingerprint
      value: {
        choices: undefined
        text: undefined
        value: 25
      }
    ,
      ip: some ip
      fingerprint: some fingerprint
      value: {
        choices: undefined
        text: undefined
        value: 80
      }
    ]

    results: {
      choices: []
      free: [object Object]
    }
  
`;

exports[`SessionExecService addResponse allows adding responses to an open SC instance 1`] = `

    SESSION

    Name: testing session
    Status: RUNNING

    ActiveBlock: 0
    ActiveInstances: 1

    Blocks: [{
      Show solutions: false
      Status: ACTIVE
      Time limit: -1
      Number of instances: 1
    }]

    ConfusionTS: []

    Feedbacks: []

    Settings: {
      ConfusionActive: false
      FeedbacksActive: false
      FeedbacksPublic: false
    }
`;

exports[`SessionExecService addResponse allows adding responses to an open SC instance 2`] = `
Array [
  1,
  0,
]
`;

exports[`SessionExecService addResponse allows adding responses to an open SC instance 3`] = `
Array [
  2,
  1,
]
`;

exports[`SessionExecService addResponse allows adding responses to an open SC instance 4`] = `

    QUESTION_INSTANCE

    isOpen: true
    version: 0

    responses: [
      ip: some ip
      fingerprint: some fingerprint
      value: {
        choices: 0
        text: undefined
        value: undefined
      }
    ,
      ip: some ip
      fingerprint: some fingerprint
      value: {
        choices: 0,1
        text: undefined
        value: undefined
      }
    ]

    results: {
      choices: [2,1]
      free: undefined
    }
  
`;
